--- a/index.Rmd
+++ b/index.Rmd
@@ -362,11 +362,11 @@ Diketahui dalam suatu kotak terdapat 2 bola kuning dan 4 bola hijau. Jika diambi
 
 Misalkan $X$ peubah acak diskret, maka
 
-- .red[**Nilai Harapan: **] $E(X)=\sum_{\forall x}xp(x)$
+- .red[**Nilai Harapan: **] $E(X)=\sum_\limits{\forall x}xp(x)$
 
 
 - .red[**Ragam: **] $\text{Var}(X)=E(X^2)-[E(X)]^2$<br>
-  dengan $E(X^2)=\sum_{\forall x}x^2p(x)$<br><br>
+  dengan $E(X^2)=\sum_\limits{\forall x}x^2p(x)$<br><br>
   
 .red[**Contoh: **]Misalkan diketahui peubah acak diskret $X$ dengan sebaran peluang
 
@@ -382,8 +382,8 @@ Misalkan $X$ peubah acak diskret, maka
 
 
 
-$E(X)=\sum_{\forall x}xp(x)=0(1/8)+2(4/8)+4(3/8)=5/2$<br><br>
-$E(X^2)=\sum_{\forall x}x^2p(x)=0+2+6=8$<br><br>
+$E(X)=\sum_\limits{\forall x}xp(x)=0(1/8)+2(4/8)+4(3/8)=5/2$<br><br>
+$E(X^2)=\sum_\limits{\forall x}x^2p(x)=0+2+6=8$<br><br>
 $\text{Var}(X)=E(X^2)-[E(X)]^2=8-(5/2)^2=7/4$<br><br>
 $E(2X-1)=2E(X)-1=2(5/2)-1=4$<br><br>
 $\text{Var}(2X-1)=4\text{Var}(X)=4(7/4)=7$
